# homing

./: .gitignore  CHANGELOG.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  ROADMAP.legacy.md  ROADMAP.md  SUPPORTED.md  openemail.desktop  pyproject.toml
.github/workflows/: ci.yml
docs/: feature-matrix.md
packaging/: README.md
packaging/appimage/: build.sh
scripts/: check_db.py
src/openemail/: app.py  config.py  main.py
src/openemail/background/: background_manager.py
src/openemail/core/: account_cleanup.py  activesync_client.py  auth.py  caldav_client.py  connection_manager.py  connection_status.py  connection_tester.py  draft_autosave.py  draft_syncer.py  imap_client.py  mail_builder.py  mail_helpers.py  mail_parser.py  mail_sync.py  network_monitor.py  oauth2.py  oauth2_new.py  operation_queue.py  pop3_client.py  smtp_client.py  thread_builder.py  validation_snapshot.py
src/openemail/filter/: bayes_filter.py  engine.py  enhanced_filter_engine.py  rule_matcher.py  tokenizer.py
src/openemail/models/: account.py  calendar_event.py  contact.py  draft.py  email.py  email_thread.py  filter_rule.py  folder.py  label.py  project.py  tag.py  todo.py
src/openemail/queue/: email_operations.py  offline_queue.py
src/openemail/search/: embedding_service.py  faiss_index.py  semantic_search.py
src/openemail/storage/: database.py  mail_store.py  migrations.py  search.py  search_enhanced.py
src/openemail/ui/: accounts_dialog.py  keyboard_shortcuts.py  main_window.py  sidebar.py
src/openemail/ui/calendar/: calendar_page.py
src/openemail/ui/contacts/: contact_detail.py  contact_editor.py  contact_manager.py  contact_page.py
src/openemail/ui/filter/: enhanced_filter_manager.py  filter_dialog.py
src/openemail/ui/labels/: label_manager.py  label_selector.py
src/openemail/ui/mail/: account_dialog.py  attachment_manager.py  attachment_preview.py  compose_window.py  mail_list.py  mail_list_enhanced.py  mail_view.py  search_bar.py  welcome_dialog.py  welcome_dialog_enhanced.py
src/openemail/ui/project/: project_page.py
src/openemail/ui/queue/: offline_queue_manager.py
src/openemail/ui/search/: search_enhanced_ui.py
src/openemail/ui/settings/: account_settings.py  settings_page.py
src/openemail/ui/todo/: todo_page.py
src/openemail/ui/tools/: account_cleanup_dialog.py
src/openemail/utils/: calendar_reminder.py  crypto.py  desktop_notifier.py  exceptions.py  i18n.py  logging_config.py  notify.py
tests/: conftest.py  test_account.py  test_auth.py  test_connection_status.py  test_connection_tester_integration.py  test_crash_recovery.py  test_database_security.py  test_fixtures.py  test_folder.py  test_logging_config.py  test_mail_builder.py  test_mail_store_cleanup.py  test_migration_rollback.py  test_migrations.py  test_offline_queue.py  test_search_engine.py  test_search_enhanced.py  test_smoke.py  test_smtp_sent_copy.py  test_sync_correctness.py  test_thread_builder.py
tests/fixtures/: attachment.eml  forward.eml  html.eml  multipart.eml  plain_text.eml  reply.eml
(+2 files in other folders)
