[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openemail"
version = "0.6.0"
description = "A Linux-first desktop email client with IMAP/SMTP, OAuth2, calendar, and contacts"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "OpenEmail Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "PyQt6>=6.11",
    "PyQt6-WebEngine>=6.11",
    "aioimaplib>=2.0",
    "aiosmtplib>=5.1",
    "mail-parser>=4.2",
    "keyring>=25.0",
    "cryptography>=44.0",
]

[project.optional-dependencies]
oauth = ["authlib>=1.6", "httpx>=0.27"]
semantic = ["numpy>=1.26"]
spam = ["simplebayes>=1.0", "jieba>=0.42"]
dev = ["pytest>=8.0", "pytest-qt>=4.0", "ruff>=0.6"]
all = ["authlib>=1.6", "httpx>=0.27", "numpy>=1.26", "simplebayes>=1.0", "jieba>=0.42"]

[project.scripts]
openemail = "openemail.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openemail"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
